--- a/Vienna/Interfaces/pt.lproj/MainMenu.strings
+++ b/Vienna/Interfaces/pt.lproj/MainMenu.strings
@@ -223,10 +223,10 @@
 /* Class = "NSMenuItem"; title = "Open Article Page in External Browser"; ObjectID = "1067"; */
 "1067.title" = "Abrir página do Artigo no Browser Externo";
 
-/* Class = "NSMenuItem"; title = "Bigger Text"; ObjectID = "1084"; */
+/* Class = "NSMenuItem"; title = "Make Text Bigger"; ObjectID = "1084"; Note = "This string is also used in Safari"; */
 "1084.title" = "Texto Maior";
 
-/* Class = "NSMenuItem"; title = "Smaller Text"; ObjectID = "1085"; */
+/* Class = "NSMenuItem"; title = "Make Text Smaller"; ObjectID = "1085"; Note = "This string is also used in Safari"; */
 "1085.title" = "Texto Menor";
 
 /* Class = "NSMenuItem"; title = "Open Web Location…"; ObjectID = "1101"; */
