--- a/Vienna/Resources/da.lproj/InfoPlist.strings
+++ b/Vienna/Resources/da.lproj/InfoPlist.strings
@@ -1,3 +1,9 @@
 /* A message that tells the user why Vienna is requesting the ability to send Apple events. */
 "NSAppleEventsUsageDescription" = "";
 
+/* A label for plug-in bundles. This is shown in Finder's Get Info window, for example. */
+"Vienna plug-in" = "Vienna-udvidelse";
+
+/* A label for style bundles. This is shown in Finder's Get Info window, for example. */
+"Vienna style" = "Vienna-stil";
+
