--- a/Vienna/Resources/es.lproj/InfoPlist.strings
+++ b/Vienna/Resources/es.lproj/InfoPlist.strings
@@ -2,5 +2,8 @@
 "NSAppleEventsUsageDescription" = "";
 
 /* A label for plug-in bundles. This is shown in Finder's Get Info window, for example. */
-"Vienna plug-in" = "Módulo de Vienna";
+"Vienna plug-in" = "Complemento de Vienna";
+
+/* A label for style bundles. This is shown in Finder's Get Info window, for example. */
+"Vienna style" = "Estilo de Vienna";
 
