--- a/Vienna/Resources/fr.lproj/Localizable.strings
+++ b/Vienna/Resources/fr.lproj/Localizable.strings
@@ -53,21 +53,6 @@
 "A new Vienna database cannot be created at \"%@\" because the folder is probably located on a remote network share and this version of Vienna cannot manage remote databases. Please choose an alternative folder that is located on your local machine." = "Une nouvelle base de données Vienna ne peut être créée dans '%@' car ce dossier est probablement situé sur un réseau partagé, et cette version de Vienna ne gère pas les bases de données distantes. S'il vous plait, choisissez un dossier présent localement sur votre machine.";
 
 /* No comment provided by engineer. */
-"After 2 Days" = "Après 2 jours";
-
-/* No comment provided by engineer. */
-"After 2 Weeks" = "Après 2 semaines";
-
-/* No comment provided by engineer. */
-"After a Day" = "Après un jour";
-
-/* No comment provided by engineer. */
-"After a Month" = "Après un mois";
-
-/* No comment provided by engineer. */
-"After a Week" = "Après une semaine";
-
-/* No comment provided by engineer. */
 "An error occurred when this feed was last refreshed" = "Une erreur est apparue lors du rafraîchissement de ce flux";
 
 /* No comment provided by engineer. */
@@ -212,6 +197,9 @@
 
 /* Title of a button on an alert */
 "Empty" = "Vider";
+
+/* Title of a menu item */
+"Empty Trash…" = "Vider la corbeille…";
 
 /* Data field name (Y/N) visible in menu/smart folder definition */
 "Enclosure" = "Fichier joint";
